--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 </div>
 
                 <button id="addBtn" class="btn btn-primary">Add notes</a>
+                <button id="delBtn" style="margin-left: 20px;" class="btn btn-primary">Delete </a>
+                <!-- <button id="waitBtn" style="margin-left: 20px;" class="btn btn-primary">cancel</a> -->
             </div>
             <h1 style="text-align: center;">Important Notes</h1>
             <div id="notes" class="notes"></div>
