--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             </div>
             <h1 style="text-align: center;">Important Notes</h1>
             <div id="notes" class="notes"></div>
-
-
+            <center><img style="text-align: center;" src="https://hitwebcounter.com/counter/counter.php?page=7749804&style=0001&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a></center>                                    
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
